force-app/main/default/objects/Escalation__c/Escalation__c.object-meta.xml
<CustomObject>
    <description>Escalation object for managing escalations by different departments under one object.</description>
    <label>Escalations</label>
    <nameField>
        <label>Escalation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Escalations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>