force-app/main/default/objects/Escalation__c/fields/Action_Plan_Summary__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_Summary__c</fullName>
    <inlineHelpText>List open action steps for resolving the issue. For each actionable task, list the owner and the expected date of completion. Keep this brief and to the point.</inlineHelpText>
    <label>Action Plan Summary</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>