force-app/main/default/objects/Escalation__c/fields/Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comments__c</fullName>
    <description>Additional Owner(s) log updates here or in Chatter. Issue Owner then compiles updates to update Issue, Action Plan, and History fields.</description>
    <inlineHelpText>Additional Owner(s) log updates here or in Chatter. Issue Owner then compiles updates to update Issue, Action Plan, and History fields.</inlineHelpText>
    <label>Additional Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>