force-app/main/default/objects/Escalation__c/fields/Changes_Since_Last_Alert__c.field-meta.xml
<CustomField>
    <fullName>Changes_Since_Last_Alert__c</fullName>
    <description>Maintained by Red Account Team and used in the preamble at the top of Internal Alert email</description>
    <inlineHelpText>Highlight or summarize the changes in this Red Account since the last Internal Alert was sent out.Note: this text will appear in RED at the top of the Internal Alert but does not replace the need to enter data in other fields on this page</inlineHelpText>
    <label>Changes Since Last Alert</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>