force-app/main/default/objects/Escalation__c/fields/Customer_Executive_Contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Executive_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Name of the executive customer liaison involved in the closure process</inlineHelpText>
    <label>Customer Executive Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Escalations</relationshipName>
    <type>Lookup</type>
</CustomField>