force-app/main/default/objects/Escalation__c/fields/Date_Closed_Alert_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Closed_Alert_Sent__c</fullName>
    <description>Identify the date the closed alert was sent by Escalation team</description>
    <inlineHelpText>Identify the date the closed alert was sent by Escalation team</inlineHelpText>
    <label>Date Closed Alert Sent</label>
    <type>Date</type>
</CustomField>