force-app/main/default/objects/Escalation__c/fields/Days_Downgraded__c.field-meta.xml
<CustomField>
    <fullName>Days_Downgraded__c</fullName>
    <formula>(   Watchlist_End_Date__c   -  Watchlist_Start_Date__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Days Downgraded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>