force-app/main/default/objects/Escalation__c/fields/Days_Escalated__c.field-meta.xml
<CustomField>
    <fullName>Days_Escalated__c</fullName>
    <formula>TODAY()- Escalation_Start_Date__c</formula>
    <label># Days Escalated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>