force-app/main/default/objects/Escalation__c/fields/EscalatedAccount__c.field-meta.xml
<CustomField>
    <fullName>EscalatedAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The name of the escalated account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Escalations</relationshipName>
    <type>Lookup</type>
</CustomField>