force-app/main/default/objects/Escalation__c/fields/Escalation_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Escalation_End_Date__c</fullName>
    <label>Escalation End Date</label>
    <type>Date</type>
</CustomField>