force-app/main/default/objects/Escalation__c/fields/Escalation_Manager__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to identify the EM responsible for managing the Red Account escalation. Escalations are distributed by region.</description>
    <inlineHelpText>Field managed/updated by Escalations Management team to show the EM responsible for managing the escalation.</inlineHelpText>
    <label>Escalation Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Escalations2</relationshipName>
    <type>Lookup</type>
</CustomField>