force-app/main/default/objects/Escalation__c/fields/Escalation_Manager_Notes__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Manager_Notes__c</fullName>
    <inlineHelpText>Notes for internal Escalation Management Team only. Access is limited to Escalation Manager user profile.</inlineHelpText>
    <label>Escalation Manager Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>