force-app/main/default/objects/Escalation__c/fields/Escalation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Start_Date__c</fullName>
    <inlineHelpText>Set to the date the Escalation Category and initial Issue Owner are determined</inlineHelpText>
    <label>Escalation Start Date</label>
    <type>Date</type>
</CustomField>