force-app/main/default/objects/Escalation__c/fields/Escalation_Trend__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Trend__c</fullName>
    <description>Red account trending field to monitor progress, up, down or neutral of a red account issue.</description>
    <inlineHelpText>Change since the previous Red Accout Review call</inlineHelpText>
    <label>Customer Sentiment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Improving</fullName>
                <color>#33CC00</color>
                <label>Improving</label>
            </value>
            <value>
                <fullName>Neutral</fullName>
                <color>#FFFF66</color>
                <label>Neutral</label>
            </value>
            <value>
                <fullName>Declining</fullName>
                <color>#FF0000</color>
                <label>Declining</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>