force-app/main/default/objects/Escalation__c/fields/Escalations_VP__c.field-meta.xml
<CustomField>
    <fullName>Escalations_VP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identify VP of Escalations for alert purposes</description>
    <inlineHelpText>Identify VP of Escalations for alert purposes</inlineHelpText>
    <label>Escalations VP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Escalations9</relationshipName>
    <type>Lookup</type>
</CustomField>