force-app/main/default/objects/Escalation__c/fields/Exec_Action_Requested__c.field-meta.xml
<CustomField>
    <fullName>Exec_Action_Requested__c</fullName>
    <description>Enter the strategic intent for engaging Execs in the resolution Action Plan. Provide specific goals and tasks you are asking the executive to execute.</description>
    <inlineHelpText>Enter the strategic intent for engaging Execs in the resolution Action Plan. Provide specific goals and tasks you are asking the executive to execute. Once the executive agrees to engage, move the details to the &quot;Action Plan&quot; field</inlineHelpText>
    <label>Exec Action Requested</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>