force-app/main/default/objects/Escalation__c/fields/Exec_Escalation__c.field-meta.xml
<CustomField>
    <fullName>Exec_Escalation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>EM-only field to flag records for executive dashboard exposure</inlineHelpText>
    <label>Exec Escalation</label>
    <type>Checkbox</type>
</CustomField>