force-app/main/default/objects/Escalation__c/fields/Exec_Escalation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Exec_Escalation_Reason__c</fullName>
    <inlineHelpText>Select purpose of escalation: 
1. Awareness- based on significant revenue at risk and/or notable actions underway; 
2. Action- should be explained in the &quot;Action Plan&quot; field 
3. Exec Watch list- for new or nearly resolved issues on interest to Execs</inlineHelpText>
    <label>Exec Escalation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Action</fullName>
            </value>
            <value>
                <fullName>Awareness</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>