force-app/main/default/objects/Escalation__c/fields/Executive_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Executive_Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>EM will set the Executive who will guide owner in resolving the issue.</inlineHelpText>
    <label>Executive Sponsor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Escalations1</relationshipName>
    <type>Lookup</type>
</CustomField>