force-app/main/default/objects/Escalation__c/fields/Executive_Summary__c.field-meta.xml
<CustomField>
    <fullName>Executive_Summary__c</fullName>
    <inlineHelpText>Please enter a short headline of the issue.</inlineHelpText>
    <label>Executive Summary</label>
    <length>200</length>
    <type>Text</type>
</CustomField>