force-app/main/default/objects/Escalation__c/fields/History__c.field-meta.xml
<CustomField>
    <fullName>History__c</fullName>
    <inlineHelpText>Provide a detailed description or history of the issue or account for context.</inlineHelpText>
    <label>Historical Action Items</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>