force-app/main/default/objects/Escalation__c/fields/Issue_Owner__c.field-meta.xml
<CustomField>
    <fullName>Issue_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>A field that indicates who is responsible for the escalation</inlineHelpText>
    <label>Issue Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Escalations</relationshipName>
    <type>Lookup</type>
</CustomField>