force-app/main/default/objects/Escalation__c/fields/Issue_Owner_s_Manager__c.field-meta.xml
<CustomField>
    <fullName>Issue_Owner_s_Manager__c</fullName>
    <formula>Issue_Owner__r.Manager.FirstName +  &quot; &quot; + Issue_Owner__r.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Issue Owner&apos;s Manager</label>
    <type>Text</type>
</CustomField>