force-app/main/default/objects/Escalation__c/fields/Issue_Summary__c.field-meta.xml
<CustomField>
    <fullName>Issue_Summary__c</fullName>
    <inlineHelpText>This is a high level field representing the CURRENT issue. It should be concise(&lt;400 characters) for execs to read. Details should be placed in Issue Details field.</inlineHelpText>
    <label>Issue Summary</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>