force-app/main/default/objects/Escalation__c/fields/Key_Risk_Category__c.field-meta.xml
<CustomField>
    <fullName>Key_Risk_Category__c</fullName>
    <description>Use to categorize the escalation at the highest level.</description>
    <label>Key Risk Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Economic</fullName>
            </value>
            <value>
                <fullName>Adoption/Value</fullName>
            </value>
            <value>
                <fullName>Implementation</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Account Management</fullName>
            </value>
            <value>
                <fullName>Self Inflicted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>