force-app/main/default/objects/Escalation__c/fields/Lessons_Learned__c.field-meta.xml
<CustomField>
    <fullName>Lessons_Learned__c</fullName>
    <inlineHelpText>Indicate knowledge gained from this resolution effort so it can be leveraged to resolve future Escalations with the same successful methodology. Also call out areas where changing conditions &amp; approach are called for to improve the Escalations process.</inlineHelpText>
    <label>Lessons Learned</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>