force-app/main/default/objects/Escalation__c/fields/Next_Alert_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Alert_Due_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Next Action Date</label>
    <type>Date</type>
</CustomField>