force-app/main/default/objects/Escalation__c/fields/of_Days_Until_Renewal__c.field-meta.xml
<CustomField>
    <fullName>of_Days_Until_Renewal__c</fullName>
    <formula>IF( (ISPICKVAL( Status__c , &quot;Lost&quot;) || ISPICKVAL( Status__c , &quot;Resolved&quot;)) , NULL,  Renewal_Date__c - TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Days Until Renewal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>