force-app/main/default/objects/Escalation__c/fields/Original_Issue__c.field-meta.xml
<CustomField>
    <fullName>Original_Issue__c</fullName>
    <label>Original Issue</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>