force-app/main/default/objects/Escalation__c/fields/Primary_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Primary_Competitor__c</fullName>
    <description>Capture Primary Competitor where there is a competitive threat.</description>
    <inlineHelpText>If Competitive Threat, enter primary competitor here</inlineHelpText>
    <label>Primary Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Competitor 1</fullName>
            </value>
            <value>
                <fullName>Competitor 2</fullName>
            </value>
            <value>
                <fullName>Competitor 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>