force-app/main/default/objects/Escalation__c/fields/Primary_Product_at_Risk__c.field-meta.xml
<CustomField>
    <fullName>Primary_Product_at_Risk__c</fullName>
    <description>Primary Product at Risk</description>
    <label>Primary Product at Risk</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product A</fullName>
            </value>
            <value>
                <fullName>Product B</fullName>
            </value>
            <value>
                <fullName>Product C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>