force-app/main/default/objects/Escalation__c/fields/Primary_Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Primary_Root_Cause__c</fullName>
    <label>Primary Root Cause</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Competitive Situation</fullName>
            </value>
            <value>
                <fullName>Expert Services were not engaged</fullName>
            </value>
            <value>
                <fullName>Feature/Functionality</fullName>
            </value>
            <value>
                <fullName>Financially Distressed</fullName>
            </value>
            <value>
                <fullName>ISV App</fullName>
            </value>
            <value>
                <fullName>Lack of customer Salesforce skills</fullName>
            </value>
            <value>
                <fullName>Merger/Acquisition</fullName>
            </value>
            <value>
                <fullName>Non-Payment by Customer</fullName>
            </value>
            <value>
                <fullName>Partner resources not certified</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Platform</fullName>
            </value>
            <value>
                <fullName>Pod related</fullName>
            </value>
            <value>
                <fullName>Poorly defined requirements</fullName>
            </value>
            <value>
                <fullName>Poor Partner project management skills</fullName>
            </value>
            <value>
                <fullName>Release related</fullName>
            </value>
            <value>
                <fullName>Sold wrong product/version</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>