force-app/main/default/objects/Escalation__c/fields/Product_Module_at_Risk__c.field-meta.xml
<CustomField>
    <fullName>Product_Module_at_Risk__c</fullName>
    <label>Product Module at Risk</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Primary_Product_at_Risk__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product A Module 1</fullName>
            </value>
            <value>
                <fullName>Product A Module 2</fullName>
            </value>
            <value>
                <fullName>Product B Module 1</fullName>
            </value>
            <value>
                <fullName>Product B Module 2</fullName>
            </value>
            <value>
                <fullName>Product C Module 1</fullName>
            </value>
            <value>
                <fullName>Product C Module 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>