force-app/main/default/objects/Escalation__c/fields/RCA_Outcome__c.field-meta.xml
<CustomField>
    <fullName>RCA_Outcome__c</fullName>
    <inlineHelpText>Indicates what changed as a result of this escalation</inlineHelpText>
    <label>RCA Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Best Practice</fullName>
            </value>
            <value>
                <fullName>Needs Improvement</fullName>
            </value>
            <value>
                <fullName>Best Practice / Needs Improvement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>