force-app/main/default/objects/Escalation__c/fields/RCA_Review_Participants__c.field-meta.xml
<CustomField>
    <fullName>RCA_Review_Participants__c</fullName>
    <description>Participants in the Root Cause Analysis process</description>
    <inlineHelpText>Participants in the Root Cause Analysis process</inlineHelpText>
    <label>RCA Review Participants</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>