force-app/main/default/objects/Escalation__c/fields/RCA_Status__c.field-meta.xml
<CustomField>
    <fullName>RCA_Status__c</fullName>
    <inlineHelpText>Indicate whether or not a root cause analysis has been completed.</inlineHelpText>
    <label>RCA Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>