force-app/main/default/objects/Escalation__c/fields/Reason_Closed__c.field-meta.xml
<CustomField>
    <fullName>Reason_Closed__c</fullName>
    <label>Reason Closed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>