force-app/main/default/objects/Escalation__c/fields/Reason_De_Escalated__c.field-meta.xml
<CustomField>
    <fullName>Reason_De_Escalated__c</fullName>
    <inlineHelpText>Please complete this field if Red Account Stage is changed from Open to Yellow</inlineHelpText>
    <label>Reason De-Escalated</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>