force-app/main/default/objects/Escalation__c/fields/Red_Exit_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Red_Exit_Criteria__c</fullName>
    <defaultValue>&quot;Sample action: Month-day-year - &lt;action details&gt;&quot;</defaultValue>
    <inlineHelpText>Add the date and criteria to meet to move this out of Red.</inlineHelpText>
    <label>Red Exit Criteria</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>