force-app/main/default/objects/Escalation__c/fields/Related_Case__c.field-meta.xml
<CustomField>
    <fullName>Related_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Case associated with Escalation from Support</inlineHelpText>
    <label>Related Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Escalations</relationshipName>
    <type>Lookup</type>
</CustomField>