force-app/main/default/objects/Escalation__c/fields/Related_Contract__c.field-meta.xml
<CustomField>
    <fullName>Related_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The revenue risk presented for the escalated customer.</inlineHelpText>
    <label>Related Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipName>Escalations</relationshipName>
    <type>Lookup</type>
</CustomField>