force-app/main/default/objects/Escalation__c/fields/Revenue_at_Risk__c.field-meta.xml
<CustomField>
    <fullName>Revenue_at_Risk__c</fullName>
    <inlineHelpText>Qualitative assesment of customer AOV potentially impacted by this issue.</inlineHelpText>
    <label>Revenue at Risk</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>