force-app/main/default/objects/Escalation__c/fields/Risk_Detail__c.field-meta.xml
<CustomField>
    <fullName>Risk_Detail__c</fullName>
    <description>This field depends on Key Risk Category. Add further detail here.</description>
    <inlineHelpText>This field depends on Key Risk Category. Add further detail here.</inlineHelpText>
    <label>Risk Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Key_Risk_Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Reduction in Force (RIF) Restructure</fullName>
            </value>
            <value>
                <fullName>Suspended/Payment Issues</fullName>
            </value>
            <value>
                <fullName>Out of Business/Bankruptcy</fullName>
            </value>
            <value>
                <fullName>Price Reduction/Financial Distress</fullName>
            </value>
            <value>
                <fullName>Regional Economic Issues</fullName>
            </value>
            <value>
                <fullName>Failed to customize Product to meet Business Processes</fullName>
            </value>
            <value>
                <fullName>Poor Data Quality</fullName>
            </value>
            <value>
                <fullName>Lack of Internal Sponsorship</fullName>
            </value>
            <value>
                <fullName>Insufficient Value</fullName>
            </value>
            <value>
                <fullName>Insufficient Support Structure/Inadequate Change Management</fullName>
            </value>
            <value>
                <fullName>Dissatisfaction with technical Support &amp; Service experience</fullName>
            </value>
            <value>
                <fullName>Lack of Long Term vision</fullName>
            </value>
            <value>
                <fullName>Poor Architecture Design</fullName>
            </value>
            <value>
                <fullName>Stagnant Feature Set</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Salesforce Services</fullName>
            </value>
            <value>
                <fullName>ISV</fullName>
            </value>
            <value>
                <fullName>Product Feature Gap</fullName>
            </value>
            <value>
                <fullName>Product Defect</fullName>
            </value>
            <value>
                <fullName>Platform or Infrastructure Instabililty</fullName>
            </value>
            <value>
                <fullName>M&amp;A Corp Standard</fullName>
            </value>
            <value>
                <fullName>Management Change</fullName>
            </value>
            <value>
                <fullName>Lack of Executive Relationship</fullName>
            </value>
            <value>
                <fullName>Contract Transfer to ISV</fullName>
            </value>
            <value>
                <fullName>Customer Dissatisfaction/with commercial terms (Bill Frequency/MSA)</fullName>
            </value>
            <value>
                <fullName>New Security Policies/Regulatory restrictions</fullName>
            </value>
            <value>
                <fullName>Pricing Tier achievement</fullName>
            </value>
            <value>
                <fullName>Oversold – Transfer of Users</fullName>
            </value>
            <value>
                <fullName>Limited Life licenses</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>