force-app/main/default/objects/Escalation__c/fields/Root_Cause_Summary__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause_Summary__c</fullName>
    <inlineHelpText>Define what caused the issue, including any complications after the Escalation team was engaged. Apply the 5 whys approach... 
“The 5 Whys is a question-asking method used to explore the cause/effect relationships underlying a particular issue.</inlineHelpText>
    <label>Root Cause Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>