force-app/main/default/objects/Escalation__c/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sales Rep responsible for this customer</description>
    <inlineHelpText>Identify the sales rep responsible for this customer</inlineHelpText>
    <label>Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Escalations3</relationshipName>
    <type>Lookup</type>
</CustomField>