force-app/main/default/objects/Escalation__c/fields/Sales_Rep_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identify manager of the sales rep assigned to this customer</description>
    <inlineHelpText>Identify manager of the sales rep assigned to this customer</inlineHelpText>
    <label>Sales Rep Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Escalations4</relationshipName>
    <type>Lookup</type>
</CustomField>