force-app/main/default/objects/Escalation__c/fields/Sales_VP__c.field-meta.xml
<CustomField>
    <fullName>Sales_VP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identify VP of Sales for Alert purposes. This field could be autopopulated if a single / same person every time.</description>
    <inlineHelpText>Identify VP of Sales for Alert purposes</inlineHelpText>
    <label>Sales VP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>EscalationsDkda</relationshipName>
    <type>Lookup</type>
</CustomField>