force-app/main/default/objects/Escalation__c/fields/Services_Contact__c.field-meta.xml
<CustomField>
    <fullName>Services_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identify consulting / professional services contact aligned with this customer</description>
    <inlineHelpText>Identify consulting / professional services contact aligned with this customer</inlineHelpText>
    <label>Services Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Escalations7</relationshipName>
    <type>Lookup</type>
</CustomField>