force-app/main/default/objects/Escalation__c/fields/Services_Manager__c.field-meta.xml
<CustomField>
    <fullName>Services_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identify manager of consulting / professional services contact aligned with this customer</description>
    <inlineHelpText>Identify manager of consulting / professional services contact aligned with this customer</inlineHelpText>
    <label>Services Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Escalations8</relationshipName>
    <type>Lookup</type>
</CustomField>