force-app/main/default/objects/Escalation__c/fields/Services_VP__c.field-meta.xml
<CustomField>
    <fullName>Services_VP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identify VP of Services for Alert purposes. This field could be autopopulated if the same person for every escalation.</description>
    <inlineHelpText>Identify VP of Services for Alert purposes.</inlineHelpText>
    <label>Services VP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>EscalationsDkcE</relationshipName>
    <type>Lookup</type>
</CustomField>