force-app/main/default/objects/Escalation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>Issue Identified=New; Issue Validation =Investigating; Action Plan-Agreed =Customer agreed to suggested resolution; Action Plan-Implemented =Solution in place/monitoring; Watchlist=Watchlist; Resolution Review=Post Analysis; Resolved=Green; Lost=Attrition</inlineHelpText>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <color>#FF0000</color>
                <label>Open</label>
            </value>
            <value>
                <fullName>Resolved</fullName>
                <color>#33CC00</color>
                <label>Resolved</label>
            </value>
            <value>
                <fullName>Yellow</fullName>
                <color>#FFFF66</color>
                <label>Yellow</label>
            </value>
            <value>
                <fullName>Lost</fullName>
                <color>#000000</color>
                <label>Lost</label>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>